# Mailing_service

./: .env.sample  README.md  blog_data.json  clients_data.json  mailings_data.json  pyproject.toml
apps/blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_list.html
apps/blog/templatetags/: my_tags.py
apps/clients/: admin.py  forms.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py  0002_alter_clients_email_alter_clients_name.py  0002_rename_first_name_client_name_and_more.py  0003_clients_owner_groups_owner.py  0003_rename_client_clients.py  0004_alter_clients_options.py  0005_alter_clients_options.py
apps/clients/templates/clients/: base.html  client_form.html  (+7 more)
apps/mailings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/mailings/migrations/: 0001_initial.py  0002_mail_mailinglog_alter_mailings_options_and_more.py  0003_mailings_time.py  0004_alter_mailings_options.py  0005_mailinglog_mailing.py  0006_alter_mailings_status.py  0007_remove_mailings_clients_mailings_clients.py  0008_alter_mailinglog_attempt_status.py  0009_mailings_end_time.py  0010_alter_mailings_clients_alter_mailings_text.py  0011_alter_mailinglog_attempt_date.py  0012_mail_owner_mailinglog_owner_mailings_owner.py  0013_remove_mailinglog_owner.py
apps/users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
(+14 files in other folders)
